--- a/prompts/【扮演】贴吧暴躁老哥/说明.md
+++ b/prompts/【扮演】贴吧暴躁老哥/说明.md
@@ -4,7 +4,7 @@
 
 ## 📝 使用明细
 
-- 已实测可用模型：`deepseek-reasoner | deepseek-chat`
+- 已实测可用模型：`deepseek-reasoner ， deepseek-chat ， gemini-2.0-flash-exp`
 - 适用平台：`API调用`
 - 推荐参数：`temperature=0.8，top_p=0.9`（可选）
 - 典型场景：社交媒体回复/游戏角色扮演
